Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11455

shutdown or abort during innodb buffer pool load (from file) causing incomplete save

Details

    Description

      Assuming innodb_buffer_pool_load_at_startup is set (default from 10.2.2) and that a previous shutdown generated a viable dump file, and abort (innodb_buffer_pool_load_abort) or shutdown when this load is in progress will not result in an incomplete buffer pool.

      What is inconvenient is if this server is shutdown after limited activity the dump file (assuming innodb_buffer_pool_dump_at_shutdown is set) then the saved dump file will be significantly smaller (and suboptimal) compared to the original dump file.

      Attachments

        Activity

          danblack Daniel Black added a comment -

          pull request - proof of concept only so far - haven't done much testing on it. Feedback welcome.

          danblack Daniel Black added a comment - pull request - proof of concept only so far - haven't done much testing on it. Feedback welcome.
          danblack Daniel Black added a comment -

          test case added. Note: if accepted https://mariadb.com/kb/en/mariadb/status-variables-added-in-mariadb-102/ needs updating to include innodb_buffer_pool_load_incomplete

          danblack Daniel Black added a comment - test case added. Note: if accepted https://mariadb.com/kb/en/mariadb/status-variables-added-in-mariadb-102/ needs updating to include innodb_buffer_pool_load_incomplete
          danblack Daniel Black added a comment -

          Approved by jplindst on github. Can this be merged?

          danblack Daniel Black added a comment - Approved by jplindst on github. Can this be merged?

          I am terribly sorry for the delay. It seems to me that the test may not be working as intended.

          marko Marko Mäkelä added a comment - I am terribly sorry for the delay. It seems to me that the test may not be working as intended.

          People

            marko Marko Mäkelä
            danblack Daniel Black
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.